subtle name change :p

--- a/noods.vcxproj
+++ b/noods.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{7C458C8A-3D93-4680-B061-12F7D11BC515}</ProjectGuid>
-    <RootNamespace>noids</RootNamespace>
+    <RootNamespace>noods</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
