add firmware SPI read command also refactored some things

--- a/noods.vcxproj.filters
+++ b/noods.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="src\memory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\memory_transfer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\core.h">
@@ -66,6 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\memory.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\memory_transfer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
