--- a/noods.vcxproj
+++ b/noods.vcxproj
@@ -91,6 +91,7 @@
     <ClCompile Include="src\interpreter_other.cpp" />
     <ClCompile Include="src\interpreter_transfer.cpp" />
     <ClCompile Include="src\memory.cpp" />
+    <ClCompile Include="src\memory_transfer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\core.h" />
@@ -101,6 +102,7 @@
     <ClInclude Include="src\interpreter_other.h" />
     <ClInclude Include="src\interpreter_transfer.h" />
     <ClInclude Include="src\memory.h" />
+    <ClInclude Include="src\memory_transfer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
