--- a/Makefile.switch
+++ b/Makefile.switch
@@ -41,7 +41,7 @@ TARGET		:=	noods
 BUILD		:=	build
 SOURCES		:=	src src/switch
 DATA		:=	data
-INCLUDES	:=	src src/switch
+INCLUDES	:=	src
 
 APP_TITLE   := NooDS
 APP_AUTHOR  := Hydr8gon
@@ -55,9 +55,9 @@ ARCH	:=	-march=armv8-a+crc+crypto -mtune=cortex-a57 -mtp=soft -fPIE
 CFLAGS	:=	-g -Wall -Ofast -ffunction-sections \
 			$(ARCH) $(DEFINES)
 
-CFLAGS	+=	$(INCLUDE) -D__SWITCH__
+CFLAGS	+=	$(INCLUDE) -D__SWITCH__ #-DDEBUG
 
-CXXFLAGS	:= $(CFLAGS) -fno-rtti -fno-exceptions
+CXXFLAGS	:= $(CFLAGS) -fno-rtti
 
 ASFLAGS	:=	-g $(ARCH)
 LDFLAGS	=	-specs=$(DEVKITPRO)/libnx/switch.specs -g $(ARCH) -Wl,-Map,$(notdir $*.map)
