--- a/noods.vcxproj
+++ b/noods.vcxproj
@@ -52,7 +52,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(WXWIN)/include/msvc;$(WXWIN)/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:/wxWidgets-3.1.2/include/msvc;C:/wxWidgets-3.1.2/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalOptions>/wd4146</AdditionalOptions>
     </ClCompile>
@@ -61,7 +61,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(WXWIN)/lib/vc_lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:/wxWidgets-3.1.2/lib/vc_lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -73,14 +73,14 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <PreprocessorDefinitions>_MBCS;_CRT_SECURE_NO_WARNINGS;__WXMSW__;_UNICODE;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(WXWIN)/include/msvc;$(WXWIN)/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:/wxWidgets-3.1.2/include/msvc;C:/wxWidgets-3.1.2/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalOptions>/wd4146</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(WXWIN)/lib/vc_x64_lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:/wxWidgets-3.1.2/lib/vc_x64_lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -91,6 +91,8 @@
     <ClCompile Include="src\dma.cpp" />
     <ClCompile Include="src\gpu.cpp" />
     <ClCompile Include="src\gpu_2d.cpp" />
+    <ClCompile Include="src\gpu_3d.cpp" />
+    <ClCompile Include="src\gpu_3d_renderer.cpp" />
     <ClCompile Include="src\input.cpp" />
     <ClCompile Include="src\interpreter.cpp" />
     <ClCompile Include="src\ipc.cpp" />
@@ -108,6 +110,8 @@
     <ClInclude Include="src\dma.h" />
     <ClInclude Include="src\gpu.h" />
     <ClInclude Include="src\gpu_2d.h" />
+    <ClInclude Include="src\gpu_3d.h" />
+    <ClInclude Include="src\gpu_3d_renderer.h" />
     <ClInclude Include="src\input.h" />
     <ClInclude Include="src\interpreter.h" />
     <ClInclude Include="src\interpreter_alu.h" />
