--- a/Makefile.switch
+++ b/Makefile.switch
@@ -52,7 +52,7 @@ APP_VERSION := 0.1
 #---------------------------------------------------------------------------------
 ARCH	:=	-march=armv8-a+crc+crypto -mtune=cortex-a57 -mtp=soft -fPIE
 
-CFLAGS	:=	-g -Wall -Ofast -ffunction-sections \
+CFLAGS	:=	-g -Wall -Ofast -flto -ffunction-sections \
 			$(ARCH) $(DEFINES)
 
 CFLAGS	+=	$(INCLUDE) -D__SWITCH__ #-DDEBUG
