Give the Switch build a proper UI This is essentially the UI that I wrote for my port of melonDS to the Switch, but I rewrote it to be cleaner and easier to use. It's still missing a pause menu, because there are some compilcations that need to be worked out. Still, this is much better than having no UI!

--- a/.github/workflows/autobuild.yml
+++ b/.github/workflows/autobuild.yml
@@ -64,7 +64,7 @@ jobs:
     - name: Install devkitPro pacman
       run: wget https://github.com/devkitPro/pacman/releases/download/devkitpro-pacman-1.0.1/devkitpro-pacman.deb && sudo dpkg -i devkitpro-pacman.deb
     - name: Install Switch dev tools
-      run: sudo dkp-pacman -S switch-dev --noconfirm
+      run: sudo dkp-pacman -S switch-dev switch-mesa switch-glad --noconfirm
     - name: Checkout
       uses: actions/checkout@v1
     - name: Compile
