Update devkitPro pacman

--- a/.github/workflows/autobuild.yml
+++ b/.github/workflows/autobuild.yml
@@ -66,7 +66,7 @@ jobs:
 
     steps:
     - name: Install devkitPro pacman
-      run: wget https://github.com/devkitPro/pacman/releases/download/devkitpro-pacman-1.0.1/devkitpro-pacman.deb && sudo dpkg -i devkitpro-pacman.deb
+      run: wget https://github.com/devkitPro/pacman/releases/download/v1.0.2/devkitpro-pacman.amd64.deb && sudo dpkg -i devkitpro-pacman.amd64.deb
     - name: Install Switch dev tools
       run: sudo dkp-pacman -S switch-dev switch-mesa switch-glad --noconfirm
     - name: Downgrade devkitA64 to r14
