--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
-build/
-build-switch/
+/build
+/build-switch
+/build-android
+/.gradle
+/src/android/.cxx
+/noods
+/noods.elf
+/noods.nacp
+/noods.nro
+/noods.ini
 bios7.bin
 bios9.bin
 firmware.bin
 gba_bios.bin
-noods
-noods.elf
-noods.ini
-noods.nacp
-noods.nro
