Android: add settings menu, screen layouts, and FPS counter

--- a/src/android/AndroidManifest.xml
+++ b/src/android/AndroidManifest.xml
@@ -18,6 +18,12 @@
 
         </activity>
 
+        <activity android:name=".SettingsMenu"
+            android:label="Settings"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
+            android:screenOrientation="portrait">
+        </activity>
+
         <activity android:name=".NooActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar"
             android:screenOrientation="portrait">
