--- a/src/android/AndroidManifest.xml
+++ b/src/android/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+
     <application android:label="NooDS"
         android:requestLegacyExternalStorage="true">
 
